📝 Improve V8 article explanations and add examples

--- a/posts/part1/1-1.V8_엔진_심층_분석.md
+++ b/posts/part1/1-1.V8_엔진_심층_분석.md
@@ -655,32 +655,19 @@ const p3 = new Point(5, 6)
 위 코드에서 `p1`, `p2`, `p3`는 모두 같은 구조를 가진다. 셋 모두 `x`와 `y` 속성을 가지고, 같은 순서로 생성되었다. V8은 이런 객체들이 **같은 히든 클래스를 공유** 하도록 만든다.
 
 ```mermaid
-flowchart TB
-    subgraph 메모리구조["메모리 레이아웃"]
-        subgraph p1obj["p1"]
-            p1map["Map 포인터"] --> HC
-            p1x["x: 1"]
-            p1y["y: 2"]
-        end
-
-        subgraph p2obj["p2"]
-            p2map["Map 포인터"] --> HC
-            p2x["x: 3"]
-            p2y["y: 4"]
-        end
-
-        subgraph p3obj["p3"]
-            p3map["Map 포인터"] --> HC
-            p3x["x: 5"]
-            p3y["y: 6"]
-        end
+flowchart LR
+    subgraph Objects["객체들"]
+        direction TB
+        p1["p1: {x:1, y:2}"]
+        p2["p2: {x:3, y:4}"]
+        p3["p3: {x:5, y:6}"]
     end
 
-    subgraph HC["HiddenClass (공유)"]
-        props["속성: x, y"]
-        offsets["오프셋: x→0, y→1"]
-        proto["프로토타입 참조"]
-    end
+    HC["HiddenClass<br/>━━━━━━━━━<br/>x → offset 0<br/>y → offset 1"]
+
+    p1 --> HC
+    p2 --> HC
+    p3 --> HC
 
     style HC fill:#e8f5e9
 ```
@@ -700,7 +687,9 @@ V8은 객체 내부에 히든 클래스에 대한 포인터를 저장한다. 속
 
 ### 1-1-4-3. 트랜지션 체인
 
-객체에 속성을 추가하면 히든 클래스가 변경된다. 이 변경은 **트랜지션 체인(Transition Chain)** 으로 연결된다.
+히든 클래스는 객체의 "현재 구조"를 나타내지만, 자바스크립트에서는 객체에 언제든 속성을 추가할 수 있다. 그렇다면 속성이 추가될 때마다 히든 클래스는 어떻게 될까?
+
+V8은 속성이 추가될 때마다 새로운 히든 클래스를 생성하고, 이전 히든 클래스에서 새 히든 클래스로의 "전환(transition)" 정보를 기록해둔다. 이렇게 연결된 히든 클래스들의 연쇄를 **트랜지션 체인(Transition Chain)** 이라고 부른다. 트랜지션 체인 덕분에 V8은 같은 패턴으로 생성되는 객체들이 히든 클래스를 재사용할 수 있게 된다.
 
 ```javascript
 const obj = {} // HiddenClass 0: 빈 객체
@@ -762,6 +751,10 @@ flowchart TB
 
 인라인 캐시는 코드의 각 속성 접근 위치마다 생성된다. 그리고 실행 중에 어떤 종류의 객체를 만나느냐에 따라 상태가 변화한다. 이 상태는 성능에 직접적인 영향을 미치므로 이해해둘 필요가 있다[^14].
 
+IC의 상태는 크게 네 단계로 나뉜다. 처음에는 아무것도 관찰하지 않은 **Uninitialized** 상태에서 시작한다. 첫 번째 객체를 만나면 **Monomorphic(단형)** 상태가 되어 가장 빠른 성능을 낸다. 이후 다른 형태의 객체를 만나면 **Polymorphic(다형)** 상태로 전환되고, 너무 많은 형태를 만나면 최적화를 포기하는 **Megamorphic(거대형)** 상태가 된다.
+
+아래 다이어그램은 이 상태 전이 과정을 보여준다. 한번 Megamorphic 상태에 도달하면 다시 돌아갈 수 없다는 점에 주목해야 한다.
+
 ```mermaid
 stateDiagram-v2
     [*] --> Uninitialized: 코드 로드
@@ -777,6 +770,8 @@ stateDiagram-v2
     note right of Polymorphic: 선형 검색<br/>2~4개 캐시 엔트리
     note right of Megamorphic: 해시 테이블 검색<br/>최적화 불가
 ```
+
+이제 각 상태를 자세히 살펴보자.
 
 **Uninitialized (초기화되지 않음)**
 
@@ -877,6 +872,48 @@ delete obj.y // 히든 클래스가 "느린 모드"로 전환될 수 있음
 ```
 
 `delete` 연산자는 객체를 "딕셔너리 모드"로 전환시킬 수 있다. 딕셔너리 모드에서는 히든 클래스 기반 최적화가 적용되지 않아 속성 접근이 느려진다.
+
+위 세 가지 패턴이 실제로 히든 클래스 분기를 발생시키는지 V8 네이티브 함수를 통해 직접 확인할 수 있다. `%HaveSameMap()` 함수는 두 객체가 같은 히든 클래스를 공유하는지 반환한다.
+
+```bash
+node --allow-natives-syntax examples/1-1/1-1-4-ic-invalidation.js
+```
+
+```
+============================================================
+패턴 1: 객체 생성 순서 불일치
+============================================================
+user1: name → age 순서로 생성
+user2: name → age 순서로 생성 (user1과 동일)
+user3: age → name 순서로 생성 (순서 다름!)
+
+user1과 user2가 같은 Map 공유: true ← 예상: true
+user1과 user3가 같은 Map 공유: false ← 예상: false
+
+============================================================
+패턴 2: 동적 속성 추가
+============================================================
+p1: { name, price }
+p2: { name, price, discount }
+p3: { name }
+
+p1과 p2가 같은 Map 공유: false ← 예상: false (속성 개수 다름)
+p1과 p3가 같은 Map 공유: false ← 예상: false (속성 개수 다름)
+
+============================================================
+패턴 3: delete 연산자
+============================================================
+obj1: { x: 1, y: 2, z: 3 }
+obj2: { x: 4, y: 5, z: 6 }
+
+delete 전 - obj1과 obj2가 같은 Map 공유: true ← 예상: true
+
+delete obj2.y 실행 후...
+
+delete 후 - obj1과 obj2가 같은 Map 공유: false ← 예상: false
+```
+
+출력 결과를 보면 세 가지 패턴 모두 예상대로 히든 클래스 분기를 발생시킨다. 같은 속성을 가진 객체라도 생성 순서가 다르면 다른 히든 클래스를 갖고, 조건에 따라 속성이 추가되면 각기 다른 히든 클래스가 만들어지며, `delete` 연산 후에는 원래 같은 히든 클래스를 공유하던 객체들이 더 이상 공유하지 않게 된다.
 
 ## 1-1-5. V8 최적화를 고려한 코드 작성법
 
@@ -985,28 +1022,43 @@ const floats = [1.1, 2.2, 3.3, 4.4, 5.5] // PACKED_DOUBLE_ELEMENTS
 
 중요한 점은 **배열의 요소 종류는 한 번 "강등"되면 되돌릴 수 없다** 는 것이다. `PACKED_SMI_ELEMENTS` 배열에 부동소수점을 추가하면 `PACKED_DOUBLE_ELEMENTS`가 되고, 다시 정수만 남겨도 원래 상태로 돌아가지 않는다.
 
-또한 배열에 "구멍(hole)"이 생기지 않도록 주의해야 한다. 구멍이 있는 배열(HOLEY)은 요소 접근 시 프로토타입 체인 확인이 필요해 느려진다. 구멍이 있는 배열에서 `arr[i]`를 읽을 때, V8은 해당 인덱스가 진짜 비어있는 것인지, 아니면 `Array.prototype`에 해당 인덱스의 값이 정의되어 있는지 확인해야 한다.
+또한 배열에 "구멍(hole)"이 생기지 않도록 주의해야 한다. 구멍이 있는 배열(HOLEY)은 요소 접근 시 프로토타입 체인 확인이 필요해 느려진다.
+
+왜 프로토타입 체인을 확인해야 할까? 구멍이 있는 배열에서 `arr[i]`를 읽을 때, V8은 두 가지 상황을 구분해야 한다. 해당 인덱스에 `undefined`가 명시적으로 저장된 것인지, 아니면 한 번도 값이 할당된 적 없는 빈 슬롯(구멍)인지를 판단해야 한다. 후자의 경우 자바스크립트 명세에 따라 프로토타입 체인을 따라 올라가며 해당 인덱스의 값을 검색해야 한다.
+
+```javascript
+Array.prototype[2] = '프로토타입에서 찾음'
+
+const holey = [1, 2, , 4, 5] // 인덱스 2가 구멍
+console.log(holey[2]) // '프로토타입에서 찾음' - 프로토타입 체인 검색!
+
+const packed = [1, 2, undefined, 4, 5] // 인덱스 2에 undefined가 명시적으로 저장됨
+console.log(packed[2]) // undefined - 프로토타입 체인 검색 불필요
+```
+
+PACKED 배열은 모든 인덱스에 값이 있다고 보장되므로 프로토타입 체인 확인 없이 바로 값을 반환할 수 있다. 하지만 HOLEY 배열은 매번 "이 인덱스가 구멍인가?"를 확인하고, 구멍이면 프로토타입 체인을 검색해야 하므로 오버헤드가 발생한다.
 
 ```javascript
 // 안 좋은 예: 구멍이 있는 배열
-const holey = [1, 2, , 4, 5] // 인덱스 2가 비어있음
 const sparse = []
-sparse[1000] = 1 // 희소 배열
+sparse[1000] = 1 // 희소 배열 - 인덱스 0~999가 모두 구멍
 
 // 좋은 예: 연속된 배열
 const packed = [1, 2, 3, 4, 5]
 
 // 배열 생성 시 주의
-const arr = new Array(100) // HOLEY 배열 생성!
+const arr = new Array(100) // HOLEY 배열 생성! 100개의 구멍이 있는 배열
 const arr2 = [] // 빈 배열로 시작해서 push로 채우는 것이 나음
 for (let i = 0; i < 100; i++) {
   arr2.push(i)
 }
 ```
 
+`new Array(100)`은 길이가 100인 배열을 생성하지만, 모든 인덱스가 구멍인 HOLEY 배열이 된다. 반면 빈 배열에서 시작해 `push`로 요소를 채우면 PACKED 배열이 유지된다. 성능이 중요한 경우 후자의 방식을 사용하는 것이 좋다.
+
 ### 1-1-5-4. try-catch와 최적화
 
-과거에는 `try-catch` 블록 내부의 코드가 최적화되지 않는 문제가 있었다. 현재 V8에서는 이 제한이 크게 완화되었지만, 에러가 빈번하게 발생하는 코드 경로는 여전히 최적화에 불리하다.
+과거 V8의 Crankshaft 최적화 컴파일러는 `try-catch` 블록이 포함된 함수 전체를 최적화하지 못했다[^15]. 그래서 개발자들은 `try-catch`를 별도의 작은 함수로 분리하는 패턴을 사용하기도 했다. 하지만 TurboFan이 도입된 V8 5.9(Node.js 8.3+)부터는 이 제한이 해결되어 `try-catch`가 포함된 코드도 정상적으로 최적화된다[^16]. 다만 에러가 빈번하게 발생하는 코드 경로는 여전히 최적화에 불리하다.
 
 ```javascript
 // 에러를 제어 흐름으로 사용하는 것은 피해야 함
@@ -1030,6 +1082,8 @@ function parseJSON(str) {
   }
 }
 ```
+
+첫 번째 방식은 유효하지 않은 JSON 문자열이 자주 들어오면 매번 예외가 발생한다. 예외 처리는 **스택 되감기(stack unwinding)** 등 비용이 큰 작업을 수반하므로, 빈번한 예외는 성능에 악영향을 미친다. 스택 되감기란 예외가 발생했을 때 현재 함수에서 시작해 호출 스택을 거슬러 올라가며 적절한 `catch` 블록을 찾고, 그 과정에서 각 스택 프레임의 지역 변수를 정리하는 작업이다. 함수 호출이 깊이 중첩되어 있을수록 이 비용은 커진다. 두 번째 방식처럼 명백히 잘못된 입력은 사전에 걸러내고, `try-catch`는 정말 예외적인 상황에만 사용하는 것이 좋다.
 
 ### 1-1-5-5. 동적 키 관리에는 Object 대신 Map 사용하기
 
@@ -1159,3 +1213,7 @@ V8 최적화의 핵심 원칙은 **"일관성"** 이다. 객체 구조의 일관
 [^13]: Fast properties in V8 - <https://v8.dev/blog/fast-properties>
 
 [^14]: What's up with monomorphism? - <https://mrale.ph/blog/2015/01/11/whats-up-with-monomorphism.html>
+
+[^15]: V8: Behind the Scenes (November Edition) - <https://benediktmeurer.de/2016/11/25/v8-behind-the-scenes-november-edition/>
+
+[^16]: Launching Ignition and TurboFan - <https://v8.dev/blog/launching-ignition-and-turbofan>
